2009-01-19  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/Makefile.am:
	* src/bin/evil_suite.c:
	* src/bin/evil_test_dlfcn.c:
	* src/bin/evil_test_dlfcn.h:
	* src/bin/evil_test_environment.c:
	* src/bin/evil_test_environment.h:
	* src/bin/evil_test_gettimeofday.c:
	* src/bin/evil_test_gettimeofday.h:
	* src/bin/evil_test_link.c:
	* src/bin/evil_test_link.h:
	* src/bin/evil_test_mkstemp.c:
	* src/bin/evil_test_mkstemp.h:
	* src/bin/evil_test_realpath.c:
	* src/bin/evil_test_realpath.h:
	various fixes in the test suite.
	add mkstemp() and realpath tests.

	* src/lib/evil_dirent.c:
	fix opendir() when indexation search is not active.
	formatting.

	* src/lib/evil_stdlib.c:
	fir mkstemp() on both platform

	* src/lib/evil_unistd.c:
	remove useless error message.

2009-01-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_dirent.c:
	* src/lib/evil_fnmatch.c:
	* src/lib/evil_link_xp.cpp:
	* src/lib/evil_stdio.c:
	* src/lib/evil_stdlib.c:
	* src/lib/evil_string.c:
	* src/lib/evil_unistd.c:
	* src/lib/evil_util.c:
	warnings fixes

2008-12-27  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	add SECURITY_WIN32 to the proprocessor on Windows XP,
	should fix the bug with security.h

2008-12-27  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/evil_test_environment.c:
	check returned value

	* src/bin/evil_test_memcpy.c:
	define getpagesize() for vc++

	* src/lib/evil_unistd.c:
	move inclusion of time.h after windsock2.h
	include direct.h for vc++
	use _WIN32_WCE for Windows CE compilers in evil_getcwd()

	* src/lib/Evil.h:
	* src/lib/evil_unistd.h:
	move getcwd() define from Evil.h to evil_unistd.h
	add some C99 types to Evil.h for vc++ (will be used in eina)

	* src/lib/evil_fcntl.c:
	include io.h for vc++

	* src/lib/evil_link_xp.cpp:
	use full name for symlink(). Fix symlink on Windows XP with
	the DOS prompt or the debugger of Visual Studio.

	* src/lib/evil_mman.c:
	don't include unistd.h if vc++ is used
